# Unison-evals

./: .env.example  .gitignore  .gitmodules  BENCHMARK-SPEC.md  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  Dockerfile.server  LICENSE  METHODOLOGY.md  Makefile  README.md  docker-compose.yml  fails.py  pyproject.toml  traj.py  xray_facts.py
.github/workflows/: ci.yml
data/bitempoqa/: README.md  _generate.py  corpus.jsonl  questions.jsonl
reports/: template.md
scripts/: _estimate_cost.py  _load_corpus.py  load_corpus_msmarco.sh  run_benchmarks.sh  run_comprehensive.sh
src/unison_evals/: __init__.py  cli.py  config.py  results.py  types.py
tests/: conftest.py  test_adapter_signature_consistency.py  test_adapters.py  test_agent_e2e_runner.py  test_anthropic_raw.py  test_bitempoqa_dataset.py  test_brain_adapter.py  test_brain_modes.py  test_brain_retrieval_runner.py  test_cli.py  test_cli_scale.py  test_codex.py  test_comprehensive.py  test_dataset_base.py  test_datasets.py  test_frames_dataset.py  test_gemini_cli.py  test_google_gemini.py  test_judge.py  test_letta_adapter.py  test_mem0_adapter.py  test_memoryagentbench_dataset.py  test_msmarco_dataset.py  test_musique_dataset.py  test_openai_gpt5.py  test_pgvector_naive.py  test_results.py  test_retrieval_metrics.py  test_runner.py  test_scale_runner.py  test_stats.py  test_temporal_metric.py  test_unison_agent_track3.py  test_unison_brain.py  test_unison_brain_context.py  test_zep_adapter.py
web/: .gitignore  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts
web/app/: globals.css  home-client.tsx  layout.tsx  page.tsx
web/components/: pareto-chart.tsx
web/lib/: api.ts
(+65 files in other folders)
