[project]
name = "unison-evals"
version = "0.0.1"
description = "Public benchmark harness for Unison and comparable agent/memory systems."
authors = [{ name = "Unison Workspace" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "datasets>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "openai>=1.50.0",
    "numpy>=2.0.0",
    "mem0ai>=0.1.0",
    "letta-client>=1.10.3",
    "zep-cloud>=2.0.0",
    "google-genai>=1.0.0",
]

[project.scripts]
unison-evals = "unison_evals.cli:main"
unison-evals-server = "unison_evals.server.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unison_evals"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
